# power-trading

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CONFIG_REFERENCE.md  DATA_SOURCES.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  app.py  bootstrap_data.py  main.py  pipeline.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  live-bess.yml
.streamlit/: config.toml
configs/: config.example.yaml  config.yaml  strategy_xgb_v2.yaml
dashboard/: app.py  charts.py  live_app.py
docs/: README  app.js  index.html  styles.css
docs/data/: latest.json  manifest.json
live/: aggregate.py  assets.py  backfill.py  classify.py  fetch_live.py  figures.py  io_store.py  run_day.py  schema.py  settle.py
notebooks/: 00_feature_engineering_and_model_assessment.ipynb  01_da_positioning_backtest.ipynb  02_hybrid_execution_analysis.ipynb  03_bess_dispatch_analysis.ipynb
scripts/: pre-commit
src/backtest/: engine.py
src/bess/: bess_asset.py  da_optimizer.py  intraday_manager.py  price_forecast.py
src/data/: download.py  preprocess.py
src/evaluation/: splitter.py
src/features/: build_features.py
src/models/: signal.py  train.py
src/utils/: config.py
tests/: test_bess_asset.py  test_build_features.py  test_charts_live.py  test_config.py  test_da_optimizer.py  test_download_nordpool.py  test_engine.py  test_intraday_manager.py  test_live_app.py  test_normalize.py  test_pipeline_bess.py  test_pipeline_dispatch.py  test_preprocess.py  test_price_forecast.py  test_signal.py  test_train.py
tests/live/: test_aggregate.py  test_assets.py  (+7 more)
