[project]
name = "power-trading"
version = "0.1.0"
description = "Quantitative power trading system for DA positioning, hybrid intraday execution, and BESS dispatch"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "sklearn.*",
    "xgboost",
    "joblib",
    "pulp",
    "dotenv",
    "requests",
    "yaml",
    "plotly",
    "plotly.*",
    "streamlit",
    "streamlit.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
